implement AuthController, refactor client to client communication strategy, enable method security