@@ -4,7 +4,7 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.convert.converter.Converter;
-import org.springframework.security.config.Customizer;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
@@ -16,21 +16,20 @@ import org.springframework.security.oauth2.jwt.NimbusJwtDecoder;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
 import org.springframework.security.web.SecurityFilterChain;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity
 public class SecurityConfig {
 
     private static final String REALM_ACCESS_CLAIM = "realm_access";
     private static final String ROLES_CLAIM = "roles";
+    private static final String SCOPE_CLAIM = "scope";
     private static final String DEFAULT_ROLE_PREFIX = "ROLE_";
-
-    private final String keycloakInternalUri = System.getenv("KEYCLOAK_INTERNAL_URI");
-    private final String keycloakExternalUri = System.getenv("KEYCLOAK_EXTERNAL_URI");
-
 
     @Value("${spring.security.oauth2.resourceserver.jwt.jwk-set-uri}")
     private String jwkSetUri;
@@ -40,9 +39,10 @@ public class SecurityConfig {
         http
                 .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(authorize -> authorize
+                        .requestMatchers("/api/login").permitAll()
+                        .requestMatchers("/", "/swagger-ui.html", "/swagger-ui/**", "/v3/api-docs/**").permitAll()
                         .anyRequest().authenticated()
                 )
-                .oauth2Login(Customizer.withDefaults())
                 .oauth2ResourceServer(oauth2 -> oauth2
                         .jwt(jwt -> jwt
                                 .decoder(jwtDecoder())
@@ -54,15 +54,30 @@ public class SecurityConfig {
 
     @Bean
     JwtDecoder jwtDecoder() {
-        return NimbusJwtDecoder.withJwkSetUri(this.jwkSetUri.replace(keycloakExternalUri, keycloakInternalUri)).build();
+        return NimbusJwtDecoder.withJwkSetUri(this.jwkSetUri).build();
     }
 
     @Bean
     public JwtAuthenticationConverter oauth2jwtAuthenticationConverter() {
         Converter<Jwt, Collection<GrantedAuthority>> jwtGrantedAuthoritiesConverter = jwt -> {
+            Collection<GrantedAuthority> authorities = new ArrayList<>();
+
             Map<String, Collection<String>> realmAccess = jwt.getClaim(REALM_ACCESS_CLAIM);
-            Collection<String> roles = realmAccess.get(ROLES_CLAIM);
-            return roles.stream().map(role -> new SimpleGrantedAuthority(DEFAULT_ROLE_PREFIX + role)).collect(Collectors.toList());
+            if (realmAccess != null && realmAccess.containsKey(ROLES_CLAIM)) {
+                Collection<String> roles = realmAccess.get(ROLES_CLAIM);
+                authorities.addAll(roles.stream()
+                        .map(role -> new SimpleGrantedAuthority(DEFAULT_ROLE_PREFIX + role))
+                        .toList());
+            }
+
+            String scopesClaim = jwt.getClaim(SCOPE_CLAIM);
+            if (scopesClaim != null) {
+                Arrays.stream(scopesClaim.split("\\s+"))
+                        .map(SimpleGrantedAuthority::new)
+                        .forEach(authorities::add);
+            }
+
+            return authorities;
         };
 
         var jwtAuthenticationConverter = new JwtAuthenticationConverter();
